[api] commit progress on migrating to springdoc