@@ -17,7 +17,10 @@ package com.b2international.snowowl.core.rest;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
+import org.springdoc.core.GroupedOpenApi;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -34,24 +37,24 @@ import io.swagger.v3.oas.annotations.Hidden;
 @RequestMapping(value = "/apis", produces = { AbstractRestService.JSON_MEDIA_TYPE })
 public class SnowOwlApiRestService extends AbstractRestService {
 
-//	@Autowired
-//	private DocumentationCache documentCache;
+	@Autowired
+	private List<GroupedOpenApi> groupedOpenApis;
 	
 	@GetMapping
 	public CollectionResource<Map<String, Object>> get() {
-//		List<Map<String, Object>> items = Collections.emptyList().stream()
-//				.sorted((d1, d2) -> d1.getResourceListing().getInfo().getTitle().compareTo(d2.getResourceListing().getInfo().getTitle()))
-//				.map(this::toApiDoc)
-//				.collect(Collectors.toList());
-		return CollectionResource.of(List.of());
+		List<Map<String, Object>> items = groupedOpenApis.stream()
+				.sorted((d1, d2) -> d1.getGroup().compareTo(d2.getGroup()))
+				.map(this::toApiDoc)
+				.collect(Collectors.toList());
+		return CollectionResource.of(items);
 		
 	}
 	
-//	private Map<String, Object> toApiDoc(Documentation doc) {
-//		return ImmutableMap.of(
-//			"id", doc.getGroupName(),
-//			"title", doc.getResourceListing().getInfo().getTitle()
-//		);
-//	}
+	private Map<String, Object> toApiDoc(GroupedOpenApi doc) {
+		return Map.of(
+			"id", doc.getGroup(),
+			"title", doc.getGroup()
+		);
+	}
 	
 }
